--- a/css/styles.css
+++ b/css/styles.css
@@ -208,3 +208,24 @@ footer {
         align-items: center;
     }
 }
+@media (max-width: 64rem) {
+    .grid-item {
+    grid-template-columns: 1fr;
+    text-align: center;
+    }
+    .grid-item img {
+    max-width: 100%;
+    }
+    .text h2 {
+    font-size: 1.5rem;
+    }
+    .text p {
+    font-size: 0.95rem;
+    }
+    .footer-images {
+        display: flex;
+        justify-content: center;
+        gap: 1.25rem;
+        align-items: center;
+    }
+}
